# lambda_api

./: .gitignore  README.md  launch.example.json  pyproject.toml  requirements-dev.txt
.github/workflows/: tests.yml
scripts/: smoke.py
src/lambda_api/: __init__.py  audit_events.py  cli.py  client.py  errors.py  images.py  instances.py
tests/: conftest.py  test_cli_launch.py  test_cli_shutdown.py  test_images.py  test_instances.py
